# Airflow

./: README.md
dags/: branch.py  celery.py  group.py  sql.py  user.py  xcom.py
dags/create_table/: user_processing.py
dags/extract_user/: user_processing_extract_user.py
dags/process_user/: user_processing_process_user.py
dags/store_user/: user_processing_store_user.py
my-sdk/: pyproject.toml
my-sdk/my_sdk/: __init__.py
my-sdk/my_sdk/decorators/: sql.py
